--- a/.github/workflows/model-deployment.yml
+++ b/.github/workflows/model-deployment.yml
@@ -23,9 +23,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       
-      - name: Installing packages
+      - name: Installing prefect package
         run: | 
-          pip install -e $GITHUB_WORKSPACE
+          pip install -e prefect
         
       - name: Set prefect server
         run: | 
