--- a/.github/workflows/model-deployment.yml
+++ b/.github/workflows/model-deployment.yml
@@ -23,8 +23,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       
-      - name: Installing prefect package
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:        
+          python-version: 3.8
+      
+      - name: Install dependencies
         run: | 
+          python -m pip install --upgrade pip
           pip install prefect
         
       - name: Set prefect server
