--- a/.github/workflows/model-deployment.yml
+++ b/.github/workflows/model-deployment.yml
@@ -21,7 +21,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      #- uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -32,7 +32,11 @@ jobs:
         run: | 
           python -m pip install --upgrade pip
           pip install prefect
-        
+
+      - name: Register model deployment flow
+        run: |
+          - python $$GITHUB_WORKSPACE/wine_classifier/flows/flow_registrar.py  register-model-deployment
+
       - name: Set prefect server
         run: | 
             prefect backend server && \
