--- a/.github/workflows/model-deployment.yml
+++ b/.github/workflows/model-deployment.yml
@@ -35,7 +35,8 @@ jobs:
 
       - name: Register model deployment flow
         run: |
-          - python wine_classifier/flows/flow_registrar.py  register-model-deployment
+          ls
+       #   - python wine_classifier/flows/flow_registrar.py  register-model-deployment
 
       - name: Set prefect server
         run: | 
