--- a/.github/workflows/model-deployment.yml
+++ b/.github/workflows/model-deployment.yml
@@ -31,16 +31,16 @@ jobs:
       - name: Install dependencies
         run: | 
           python -m pip install --upgrade pip
-          pip install prefect
-
-      - name: Register model deployment flow
-        run: |
-          python wine_classifier/flows/flow_registrar.py  register-model-deployment
+          pip install -r requirements
 
       - name: Set prefect server
         run: | 
             prefect backend server && \
             echo "PREFECT__CLOUD__API=http://a991857acebaa421385f3b723277c903-1047575743.eu-west-1.elb.amazonaws.com:4200/graphql/" >> $GITHUB_ENV
+
+      - name: Register model deployment flow
+        run: |
+          python wine_classifier/flows/flow_registrar.py  register-model-deployment
 
       - name: Run deployment flow
         run: |
