--- a/.github/workflows/model-deployment.yml
+++ b/.github/workflows/model-deployment.yml
@@ -49,7 +49,12 @@ jobs:
         run: |
           python wine_classifier/flows/flow_registrar.py  register-model-deployment
 
+      - name: Get commit sha
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
       - name: Run deployment flow
         run: |
           echo Running deployment flow
-          prefect run flow --name model-deployment-pipeline --project mlops-demo
+          prefect run flow --name model-deployment-pipeline --project mlops-demo \
+            --run-name "commit: ${{ steps.vars.outputs.sha_short }}" --watch
